--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "discord.js": "^11.3.2",
     "moment": "^2.22.0",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "dropbox": "^4.0.9",
+    "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {},
   "scripts": {
