--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "discord.js": "^11.3.2",
     "moment": "^2.22.0",
+    "moment-timezone": "^0.5.21",
     "request": "^2.85.0",
     "dropbox": "^4.0.9",
     "isomorphic-fetch": "^2.2.1"
