--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-prebuild": "apt-get install -y --force-yes chrome",
+    "heroku-prebuild": "apt-get install -y --force-yes chromium-browser",
     "start": "node teralyst.js"
   },
   "author": "",
