--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "teralyste.js",
   "dependencies": {
+    "canvas": "^2.5.0",
     "discord.js": "^11.3.2",
     "moment": "^2.22.0",
     "moment-timezone": "^0.5.21",
