--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "dependencies": {
     "canvas": "^2.5.0",
     "discord.js": "^11.3.2",
+    "dropbox": "^4.0.9",
+    "isomorphic-fetch": "^2.2.1",
     "moment": "^2.22.0",
     "moment-timezone": "^0.5.21",
     "request": "^2.85.0",
-    "dropbox": "^4.0.9",
-    "isomorphic-fetch": "^2.2.1"
+    "typescript": "^3.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^14.0.11"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node teralyst.js"
+    "dev": "tsc --watch",
+    "build": "tsc",
+    "start": "node teralyste.js"
   },
   "author": "",
   "license": "Unlicense"
