--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.22.0",
     "moment-timezone": "^0.5.21",
+    "mysql": "^2.18.1",
     "request": "^2.85.0",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/node": "^14.0.11"
