--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc --watch",
     "build": "tsc",
-    "start": "node --optimize_for_size --max_old_space_size=460 src/index.js"
+    "start": "node --optimize_for_size --max_old_space_size=460 src/index.js",
+    "dbinfo": "node src/tools/databaseInfo.js"
   },
   "author": "",
   "license": "Unlicense"
