--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "teralyste.js",
   "dependencies": {
-    "canvas": "^2.5.0",
-    "discord.js": "^11.3.2",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "canvas": "^2.8.0",
+    "discord-api-types": "^0.23.1",
+    "discord.js": "^13.1.0",
     "dropbox": "^4.0.9",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.22.0",
     "moment-timezone": "^0.5.21",
     "mysql": "^2.18.1",
-    "request": "^2.85.0",
-    "typescript": "^3.9.7"
+    "request": "^2.85.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.11"
+    "@types/node": "^14.0.11",
+    "typescript": "^4.4.2"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
